--- a/index.html
+++ b/index.html
@@ -3,13 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to nexus-6.com</title>
+    <title>nexus-6.com</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
-            text-align: center;
-            padding: 5% 0;
+            margin: 0;
+            display: flex;
+            min-height: 100vh;
+        }
+        nav {
+            width: 250px;
+            background-color: #333;
+            color: white;
+            flex-shrink: 0;
+            padding: 20px 0;
+        }
+        nav ul {
+            list-style: none;
+            padding: 0;
+        }
+        nav ul li {
+            margin-bottom: 15px;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            padding: 10px 20px;
+            display: block;
+        }
+        nav a:hover {
+            background-color: #555;
+        }
+        .content {
+            flex-grow: 1;
+            padding: 20px;
         }
         .container {
             background-color: #fff;
@@ -28,9 +56,19 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Welcome to nexus-6.com</h1>
-        <p>We are currently working on something awesome. Stay tuned!</p>
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+    <div class="content">
+        <div class="container">
+            <h1>Welcome to nexus-6.com</h1>
+            <p>We are currently working on something awesome. Stay tuned!</p>
+        </div>
     </div>
 </body>
 </html>
